Acrescentando models, controllers, página de estoque e relatórios

--- a/views/layout/menu.ejs
+++ b/views/layout/menu.ejs
@@ -8,12 +8,14 @@
     <a class="navbar-item" href="/vendas">Vender</a>
     <a class="navbar-item" href="/compras">Comprar</a>
     <a class="navbar-item" href="/fluxodecaixa">Fluxo de Caixa</a>
+    <a class="navbar-item" href="/relatorios">Relatórios</a>
   </div>
 
   <div class="navbar-brand navbar-end">
     <div class="navbar-item has-dropdown is-hoverable">
       <a class="navbar-link">Opções</a>
       <div class="navbar-dropdown">
+        <a class="navbar-item" href="/perfil">Configurações</a>
         <a class="navbar-item" href="/perfil">Minha conta</a>
         <a class="navbar-item" href="/login">Sair</a>
       </div>
