--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -1,8 +1,8 @@
-<!-- </body>
+</body>
 
  <footer class="footer">
     <div class="container">
-      <div class="columns">
+      <!-- <div class="columns">
         <div class="column">
           <h4 class="title is-4">Informações de Contato</h4>
           <p>Endereço: Av. Brasil, 123 - São Lourenço do Oeste, SC</p>
@@ -18,10 +18,10 @@
             <li><a href="/contato" class="has-text-black">Contato</a></li>
           </ul>
         </div>
-      </div>
-      <hr class="has-background-grey-light">
+      </div> -->
+      <hr class="has-background-black">
       <p class="has-text-centered has-text-black">© 2023 Mega Software. Todos os direitos reservados.</p>
     </div>
   </footer>
 
-</html> -->
+</html>
