--- a/views/pages/estoque/form.ejs
+++ b/views/pages/estoque/form.ejs
@@ -4,7 +4,7 @@
 
 <section class="section">
     <div class="container">
-      <h1 class="title">Cadastro de Produtos</h1>
+      <h1 class="title">Estoque - Lista de Produtos</h1>
       <div class="field">
         <label class="label">Buscar</label>
         <div class="control">
